--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -14,6 +14,7 @@
   display: inline-block;
   padding: 0px;
   margin: 0px 5px 0px 5px;
+  min-width: 75px;
 }
 .Header li a {
   text-decoration: none;
